# FinSeriesTools

./: .gitignore  README.md  cookbook.ipynb  pyproject.toml  setup.py
