[tool.poetry]
name = "finseriestools"
version = "0.1.0"
description = "Tools for preprocessing time series"
authors = ["dm <deli91educal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.1"
wheel = "^0.43.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
